Fix chart legend overflow and GPU tooltips - update all chart heights to 117px, add cursor to GPU chart, increase legend space

--- a/py_captions_for_channels/webui/static/style.css
+++ b/py_captions_for_channels/webui/static/style.css
@@ -1213,7 +1213,7 @@ body {
 .chart-wrapper {
   flex: 1;
   min-width: 0;
-  padding-bottom: 25px;
+  padding-bottom: 30px;
   overflow: visible;
 }
 
